# pypress

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.py
notebooks/: demo.ipynb
pypress/: _version.py  clustering.py  constants.py  layers.py  regularizers.py  utils.py
pypress/keras/: README.md  activations.py  initializers.py  layers.py  regularizers.py
pypress/tests/: test_clustering.py  test_initializers.py  test_layers.py  test_model.py  test_regularizers.py  test_utils.py
