[project]
name = "pypress"
version = "0.0.5"
description = "Predictive State Smoothing (PRESS) in Python (keras)"
authors = [
    {name = "Georg M. Goerg",email = "im@gmge.org"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tensorflow (>=2.19.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (==2.1.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
