[project]
name = "pypress"
version = "0.0.6"
description = "Predictive State Smoothing (PRESS) in Python (keras)"
authors = [
    {name = "Georg M. Goerg",email = "im@gmge.org"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tensorflow (>=2.11.0,<3.0.0)",
    "pandas (>=1.5.0)",
    "numpy (>=2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
