[project]
name = "pypress"
version = "0.1.0"
description = "Predictive State Smoothing (PRESS) in Python (keras)"
authors = [
    {name = "Georg M. Goerg",email = "im@gmge.org"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tensorflow (>=2.11.0,<3.0.0)",
    "pandas (>=1.5.0)",
    "numpy (>=2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
seaborn = "^0.13.2"
tqdm = "^4.67.1"
scikit-learn = "^1.8.0"
scipy = "^1.16.3"
fastcluster = "^1.3.0"
shap = "^0.50.0"
pydot = "^4.0.1"
